update dijstra methods